@@ -1,5 +1,11 @@
 2006-02-15  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* gnu/testlet/javax/swing/JSpinner/NumberEditor/constructors.java: New test,
+	* gnu/testlet/javax/swing/JSpinner/NumberEditor/getFormat.java: Likewise,
+	* gnu/testlet/javax/swing/JSpinner/NumberEditor/getModel.java: Likewise.
+
+2006-02-15  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* gnu/testlet/javax/swing/JSpinner/ListEditor/constructor.java: New test,
 	* gnu/testlet/javax/swing/JSpinner/ListEditor/getModel.java: Likewise.
 
